feat: inclusion de imagenes en webp

--- a/es/composicionparamedios/equipo.html
+++ b/es/composicionparamedios/equipo.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/es/">
-        <img class="logo" src="../../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -56,13 +56,13 @@
   <main class="px-15">
     <div class="images-group">
       <div class="image-member">
-        <a href="/es/torre"><img loading="lazy" src="../../assets/images/torre-es.png" alt="foto torre"></a>
+        <a href="/es/torre"><img loading="lazy" src="../../assets/images/torre-es.webp" alt="foto torre"></a>
       </div>
       <div class="image-member">
-        <a href="/es/omar"><img loading="lazy" src="../../assets/images/omar-es.png" alt="foto omar"></a>
+        <a href="/es/omar"><img loading="lazy" src="../../assets/images/omar-es.webp" alt="foto omar"></a>
       </div>
       <div class="image-member">
-        <a href="/es/lando"><img loading="lazy" src="../../assets/images/lando-es.png" alt="foto lando"></a>
+        <a href="/es/lando"><img loading="lazy" src="../../assets/images/lando-es.webp" alt="foto lando"></a>
       </div>
     </div>
   </main>
