--- a/es/lando.html
+++ b/es/lando.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/es/">
-        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -60,7 +60,7 @@
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
-        <img loading="lazy" class="image-detail" src="../assets/images/lando-detail-es.jpg" alt="foto de lando">
+        <img loading="lazy" class="image-detail" src="../assets/images/lando-detail-es.webp" alt="foto de lando">
       </div>
       <p id="second-quote-lando-esp" class="quote-description font-text text-left">
         <em><br>"Con Lando nos conocemos desde la adolescencia. Pronto, empezaríamos a producir musicalmente para otros artistas, así como para medios en Perú y EEUU. Con un abanico de habilidades y experiencia, él es un catalizador, motivador y pieza clave dentro de Torre Music.<br>Su equilibrio entre la apreciación del sonido de calidad, la capacidad de tomar las mejores decisiones en la mezcla, y apertura para aceptar consejos y lecciones de reconocidos y galardonados ingenieros de sonido, le han dado como resultado un nivel de calidad que alienta y hasta desafía nuestra sinergia".<br></em>
