--- a/es/omar.html
+++ b/es/omar.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/es/">
-        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -60,7 +60,7 @@
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img loading="lazy" class="image-detail" src="../assets/images/omar-detail-es.jpg" alt="foto de omar">
+        <img loading="lazy" class="image-detail" src="../assets/images/omar-detail-es.webp" alt="foto de omar">
       </div>
       <p id="second-quote-omar-esp" class="quote-description font-text text-left">
         <em>"Con una formación académica que lo convierte en una pieza muy valiosa en nuestros proyectos musicales, Pienso que Omar es un músico que ha sabido balancear muy bien lo artístico y lo académico, contar con él es descansar en que todo saldrá bien y a tiempo".<br></em>
