--- a/es/torre.html
+++ b/es/torre.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/es/">
-        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -60,7 +60,7 @@
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
-        <img loading="lazy" class="image-detail" src="../assets/images/torre-detail-es.jpg" alt="foto de torre">
+        <img loading="lazy" class="image-detail" src="../assets/images/torre-detail-es.webp" alt="foto de torre">
       </div>
       <p id="second-quote-torre-esp" class="quote-description font-text text-left">
         <em>"Si tuviera que describirlo en una frase, esa sería: 'Él respira música'.
