--- a/mediacomposing/index.html
+++ b/mediacomposing/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -56,22 +56,22 @@
   <main>
     <div class="links-paragraph-block px-15 content-container">
       <div class="group-links">
-        <a href="/mediacomposing/showreel"><img loading="lazy" src="../assets/images/showreel.png" alt="logo show reel"></a>
-        <a href="/mediacomposing/audioreel"><img loading="lazy" src="../assets/images/audioreel.png" alt="logo audio reel"></a>
+        <a href="/mediacomposing/showreel"><img loading="lazy" src="../assets/images/showreel.webp" alt="logo show reel"></a>
+        <a href="/mediacomposing/audioreel"><img loading="lazy" src="../assets/images/audioreel.webp" alt="logo audio reel"></a>
       </div>
       <p id="paragraph_eng" class="font-text px-15 description"></p>
     </div>
     <div id="images-list-eng" class="group-images-container px-15 content-container">
       <div class="image-container">
-        <img loading="lazy" src="../assets/images/Fotos Royalty free.001.jpeg" alt="Top of the line virtual libraries">
+        <img loading="lazy" src="../assets/images/Fotos Royalty free.001.webp" alt="Top of the line virtual libraries">
         <h4 class="font-text">Top of the line virtual libraries</h4>
       </div>
       <div class="image-container">
-        <img loading="lazy" src="../assets/images/Fotos Royalty free.002.jpeg" alt="Professional musicians">
+        <img loading="lazy" src="../assets/images/Fotos Royalty free.002.webp" alt="Professional musicians">
         <h4 class="font-text">Professional musicians</h4>
       </div>
       <div class="image-container">
-        <img loading="lazy" src="../assets/images/Fotos Royalty free.003.jpeg" alt="Real orchestras">
+        <img loading="lazy" src="../assets/images/Fotos Royalty free.003.webp" alt="Real orchestras">
         <h4 class="font-text">Real orchestras</h4>
       </div>
     </div>
