--- a/es/composicionparamedios/index.html
+++ b/es/composicionparamedios/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/es/">
-        <img class="logo" src="../../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -56,22 +56,22 @@
   <main>
     <div class="links-paragraph-block px-15 content-container">
       <div class="group-links">
-        <a href="/es/composicionparamedios/demodevideo"><img loading="lazy" src="../../assets/images/demo-video.png" alt="logo demo de video"></a>
-        <a href="/es/composicionparamedios/demodeaudio"><img loading="lazy" src="../../assets/images/demo-audio.png" alt="logo demo de audio"></a>
+        <a href="/es/composicionparamedios/demodevideo"><img loading="lazy" src="../../assets/images/demo-video.webp" alt="logo demo de video"></a>
+        <a href="/es/composicionparamedios/demodeaudio"><img loading="lazy" src="../../assets/images/demo-audio.webp" alt="logo demo de audio"></a>
       </div>
       <p id="paragraph_esp" class="font-text px-15 description"></p>
     </div>
     <div id="images-list-esp" class="group-images-container px-15 content-container">
       <div class="image-container">
-        <img loading="lazy" src="../../assets/images/Fotos Royalty free.001.jpeg" alt="Librerías virtuales de tope de línea">
+        <img loading="lazy" src="../../assets/images/Fotos Royalty free.001.webp" alt="Librerías virtuales de tope de línea">
         <h4 class="font-text">Librerías virtuales de tope de línea</h4>
       </div>
       <div class="image-container">
-        <img loading="lazy" src="../../assets/images/Fotos Royalty free.002.jpeg" alt="Músicos profesionales">
+        <img loading="lazy" src="../../assets/images/Fotos Royalty free.002.webp" alt="Músicos profesionales">
         <h4 class="font-text">Músicos profesionales</h4>
       </div>
       <div class="image-container">
-        <img loading="lazy" src="../../assets/images/Fotos Royalty free.003.jpeg" alt="Orquestas reales">
+        <img loading="lazy" src="../../assets/images/Fotos Royalty free.003.webp" alt="Orquestas reales">
         <h4 class="font-text">Orquestas reales</h4>
       </div>
     </div>
