--- a/landoM.html
+++ b/landoM.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="./assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="./assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -60,7 +60,7 @@
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img loading="lazy" class="image-detail" src="./assets/images/lando-detail.jpg" alt="torre photo">
+        <img loading="lazy" class="image-detail" src="./assets/images/lando-detail.webp" alt="torre photo">
       </div>
       <p id="second-quote-lando-eng" class="quote-description font-text">
         <em>"Despite his long experience as a short film director, photographer, as well as a music producer, Lando didn't lose his passion for audio engineering, which has allowed him to grow until the point of achieving a level of quality that matches the international standards. Due to his vast background, he's always able to bring solid support to overcome the obstacles we may face within the production process at Torre Music".<br></em>
