--- a/mediacomposing/showreel.html
+++ b/mediacomposing/showreel.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
