--- a/mediacomposing/team.html
+++ b/mediacomposing/team.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="../assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="../assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -56,13 +56,13 @@
   <main class="px-15">
     <div class="images-group">
       <div class="image-member">
-        <a href="/torreM"><img loading="lazy" src="../assets/images/torre.png" alt="torre photo"></a>
+        <a href="/torreM"><img loading="lazy" src="../assets/images/torre.webp" alt="torre photo"></a>
       </div>
       <div class="image-member">
-        <a href="/omarM"><img loading="lazy" src="../assets/images/omar.png" alt="omar photo"></a>
+        <a href="/omarM"><img loading="lazy" src="../assets/images/omar.webp" alt="omar photo"></a>
       </div>
       <div class="image-member">
-        <a href="/landoM"><img loading="lazy" src="../assets/images/lando.png" alt="lando photo"></a>
+        <a href="/landoM"><img loading="lazy" src="../assets/images/lando.webp" alt="lando photo"></a>
       </div>
     </div>
   </main>
