--- a/omarM.html
+++ b/omarM.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="./assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="./assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -60,7 +60,7 @@
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img loading="lazy" class="image-detail" src="./assets/images/omar-detail.jpg" alt="omar photo">
+        <img loading="lazy" class="image-detail" src="./assets/images/omar-detail.webp" alt="omar photo">
       </div>
       <p id="second-quote-omar-eng" class="quote-description font-text">
         <em>"He owns an academic preparation that turns him into a very valuable element for our music projects in Media Composing. I think Omar is a musician who managed to balance very well art with knowledge. Counting on him brings confidence at knowing everything will be on point and on time".<br></em>
