--- a/torreM.html
+++ b/torreM.html
@@ -21,7 +21,7 @@
   <nav class="navbar px-15">
     <div class="navbar__container">
       <a href="/">
-        <img class="logo" src="./assets/images/Logo web.png" width="58" height="135" alt="logo">
+        <img class="logo" src="./assets/images/Logo web.webp" width="58" height="135" alt="logo">
       </a>
       <div class="navbar__options-container">
         <ul class="navbar__flags">
@@ -60,7 +60,7 @@
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
-        <img loading="lazy" class="image-detail" src="./assets/images/torre-detail.jpg" alt="torre photo">
+        <img loading="lazy" class="image-detail" src="./assets/images/torre-detail.webp" alt="torre photo">
       </div>
       <p id="second-quote-torre-eng" class="quote-description font-text">
         <em>"If could describe him in one line, it'd be: He breathes music.<br>Torre is a natural born musician, a dear friend. Throughout the years, I've seen and exceptional ability to intertwine feelings and emotions with music, without hesitation it's a gift and the best ingredient in his compositions".<br></em>
